# eo-catalog

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  docker-compose.yml
.github/actions/: publish-docker.yml
.github/workflows/: ci.yml  publish-image.yml
deploy/helm/eocatalog/: .helmignore  Chart.yaml  README.md  dedl-values.yaml  values.yaml
deploy/helm/eocatalog/templates/: _helpers.tpl
deploy/helm/eocatalog/templates/stac/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
dockerfiles/: Dockerfile.cnpgis  Dockerfile.raster  Dockerfile.stac  Dockerfile.vector  browser_config.js
runtimes/eoapi/stac/: README.md  pyproject.toml
runtimes/eoapi/stac/eoapi/stac/: app.py  auth.py  config.py  constants.py  core.py  logs.py  models.py  redis.py  utils.py
runtimes/eoapi/stac/eoapi/stac/extensions/: __init__.py  collection_search.py  custom_transaction_extension.py  filter.py  titiller.py  transaction.py
runtimes/eoapi/stac/eoapi/stac/middlewares/: __init__.py  timeout.py  tracing.py
runtimes/eoapi/stac/eoapi/stac/templates/: stac-viewer.html
